atualização do nome

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>Rocket<span>Coffe</span></h1>
+        <h1>Rocket<span>CoffeTOP</span></h1>
         <p>Aberto todos os dias, 8h - 21h</p>
     </header>
     <section>
